update plot module

--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -651,7 +651,7 @@
     "    ax.axhline(1, ls='--', color='black', alpha=0.5, linewidth=2.5, \n",
     "               label='Critical Threshold (1/R0 = 1)')\n",
     "    \n",
-    "    ax.set_title(r'Évolution de $\\frac{1}{R_{0}}$ et de $\\frac{S}{N}$ dans le temps', \n",
+    "    ax.set_title(r'Evolution of $\\frac{1}{R_{0}}$ and $\\frac{S}{N}$ over time', \n",
     "                 fontsize=18, fontweight='bold', pad=20)\n",
     "    ax.set_xlabel('Project Duration (Days)', fontweight='bold', fontsize=16)\n",
     "    ax.set_ylabel('Value', fontweight='bold', fontsize=16)\n",
